fix ui for overlap background

--- a/src/app/components/schedule/schedule.component.css
+++ b/src/app/components/schedule/schedule.component.css
@@ -933,15 +933,25 @@ tbody th {
   color: #64707d;
 }
 .test-bg {
-  background-image: repeating-linear-gradient(
+  /* background-image: repeating-linear-gradient(
     120deg,
     white 5px,
     #f2f4f5 0.5px,
     white 12px,
     #f2f4f5 0.5px,
     white 14px
+  ) !important; */
+  background-image: linear-gradient(
+    135deg,
+    #ffffff 44.44%,
+    #e3e4e6 44.44%,
+    #e3e4e6 50%,
+    #ffffff 50%,
+    #ffffff 94.44%,
+    #e3e4e6 94.44%,
+    #e3e4e6 100%
   ) !important;
-  /* background-image: repeating-linear-gradient(120deg, white 5px  ,#F2F4F5  1px, white 12px)!important; */
+  background-size: 13px 13px;
 }
 .overlap-popup {
   width: 240px;
